// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReportInstanceListTest render 0 instances 1`] = `
<div
  className="report-instances"
>
  <p>
    Failed elements:
  </p>
  <table
    className="report-instance-table"
  >
    <tbody />
  </table>
</div>
`;

exports[`ReportInstanceListTest render 2 instances 1`] = `
<div
  className="report-instances"
>
  <p>
    Failed elements:
  </p>
  <table
    className="report-instance-table"
  >
    <tbody>
      <tr
        className="path-row"
      >
        <td
          className="label"
        >
          Path
        </td>
        <td
          className="content"
        >
          target-1
        </td>
      </tr>
      <tr
        className="snippet-row"
      >
        <td
          className="label"
        >
          Snippet
        </td>
        <td
          className="content"
        >
          &lt;html-1/&gt;
        </td>
      </tr>
      <tr
        className="path-row"
      >
        <td
          className="label"
        >
          Path
        </td>
        <td
          className="content"
        >
          target-2
        </td>
      </tr>
      <tr
        className="snippet-row"
      >
        <td
          className="label"
        >
          Snippet
        </td>
        <td
          className="content"
        >
          &lt;html-2/&gt;
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
